--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -17,6 +17,6 @@
   <p>Se não foi você, então desconsidere esse email!</p>
   <p>
     Obrigado@<br />
-    <strong>Equipe GoBarber</strong>
+    <strong>Equipe Fulano de tal</strong>
   </p>
 </div>
